--- a/build.gradle
+++ b/build.gradle
@@ -161,5 +161,5 @@ task buildDocker(type: Docker, dependsOn: build) {
 }
 
 bootRun {
-    jvmArgs = ["-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=default"]
+    jvmArgs = ["-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=local"]
 }
