--- a/k8s/app-chart/values-dev.yaml
+++ b/k8s/app-chart/values-dev.yaml
@@ -9,7 +9,7 @@ configmap:
 replicaCount: 1
 
 image:
-  repository:  operacionesregistry.azurecr.io/pana/dev/seguros-producto-gestionarproducto:1.1.1
+  repository: IMAGE_PATTERN
   pullPolicy: Always
 
 imagePullSecrets: [name: regcred]
