--- a/k8s/app-chart/values-prod.yaml
+++ b/k8s/app-chart/values-prod.yaml
@@ -9,7 +9,7 @@ configmap:
 replicaCount: 1
 
 image:
-  repository: operacionesregistry.azurecr.io/pana/prod/seguros-producto-gestionarproducto:1.1.1
+  repository: IMAGE_PATTERN
   pullPolicy: Always
 
 imagePullSecrets: [name: regcred]
