--- a/build.gradle
+++ b/build.gradle
@@ -139,7 +139,7 @@ if (!project.hasProperty("env")) {
 }
 
 task buildDocker(type: Docker, dependsOn: build) {
-	baseImage = "operacionesregistry.azurecr.io/base/alpine/openkdk8:3.13.5"
+	baseImage = "operacionesregistry.azurecr.io/base/alpine/openjSdk8:3.13.5"
 	maintainer = "adrfsc.cl"
 	hostUrl = "https://operacionesregistry.azurecr.io"
 	push = dockerPushToRegistry.toBoolean()
