--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,7 @@ dependencies {
 	compile 'io.jsonwebtoken:jjwt:0.7.0'
     runtime group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-kafka', version: '2.2.0.RELEASE'
 	compile ('com.microsoft.sqlserver:mssql-jdbc')
+	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 }
 
 dependencyManagement {
